[tool.poetry]
name = "ratpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
mypy = "^1.8.0"
safety = "^3.0.1"
pre-commit = "^3.6.2"
nitpick = "^0.35.0"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
